--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,43 +1,18 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "Python 3",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
-	"features": {
-		"ghcr.io/devcontainers/features/python:1": {
-			"installTools": true,
-			"version": "3.11"
-		}
+	"name": "T-SQL Environment",
+	"build": {
+	  "dockerfile": "Dockerfile"
 	},
-
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [5000],
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "bash scripts/install-dependencies.sh",
 	"customizations": {
-		"vscode": {
-
-		// 	"files.associations": {
-		// 		"*.yaml": "jinja-yaml",
-		// 		"*.yml": "jinja-yaml",
-		// 		"*.sql": "jinja-sql",
-		// 		"*.md": "jinja-md"}
-		// ,
-
-			"extensions": [
-				"innoverio.vscode-dbt-power-user"
-			]
-		}
-	}
-
-	// Configure tool-specific properties.
-	// "customizations": {},
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
-}
+	  "vscode": {
+		"extensions": [
+		  "ms-mssql.mssql",          // Official MSSQL extension for Visual Studio Code
+		  "vscode-icons-team.vscode-icons" // Optional for better file icon support
+		]
+	  }
+	},
+	"postCreateCommand": "./scripts/install-dependencies.sh",
+	"forwardPorts": [1433],  // Port for SQL Server
+	"remoteUser": "vscode"
+  }
+  
